# pao-de-kuai

./: .gitignore  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md
.github/workflows/: build.yml
assets/: poker-cards-metadata.json
assets/audio/: generate_sfx.ps1  metadata.json
src/ai/: LlmAiController.cpp  LlmAiController.h  LlmOffscreenExperiment.cpp  LlmOffscreenExperiment.h  PdkAiClient.cpp  PdkAiClient.h  TurnRecord.cpp  TurnRecord.h  WinHttpJsonClient.cpp  WinHttpJsonClient.h
src/app/: App.cpp  App.h  Dpi.cpp  Dpi.h  WinMain.cpp  Window.cpp  Window.h
src/audio/: AudioDecoder.cpp  AudioDecoder.h  AudioEngine.cpp  AudioEngine.h  SoundCatalog.cpp  SoundCatalog.h  SoundIds.h  WavLoader.cpp  WavLoader.h
src/core/: Geometry.h  Overlay.h  Scene.h  SceneManager.h  StringUtil.cpp  StringUtil.h  Timer.h  Tween.cpp  Tween.h  WinFile.cpp  WinFile.h
src/dialogs/: SettingsDialog.cpp  SettingsDialog.h
src/game/: AiPlayer.h  AiStrategy.cpp  AiStrategy.h  AiStrategyInternal.h  ExternalAiController.h  GameState.cpp  GameState.h  LocalAiController.cpp  LocalAiController.h  Player.h  RoundRecorder.cpp  RoundRecorder.h  RoundTraceRecorder.cpp  RoundTraceRecorder.h  StrongAiStrategy.cpp  TurnRecord.cpp  TurnRecord.h
src/graphics/: ComPtr.h  D2DContext.cpp  D2DContext.h  SpriteAtlas.cpp  SpriteAtlas.h  TextRenderer.cpp  TextRenderer.h  WicImageLoader.cpp  WicImageLoader.h
src/overlays/: AboutOverlay.cpp  AboutOverlay.h  ConfirmExitDialog.cpp  ConfirmExitDialog.h  InvalidMoveToast.cpp  InvalidMoveToast.h  ReturnToMenuOverlay.cpp  ReturnToMenuOverlay.h  RoundResultOverlay.cpp  RoundResultOverlay.h  TalkBubbleOverlay.cpp  TalkBubbleOverlay.h  TipOverlay.cpp  TipOverlay.h
src/resources/: CardAtlasData.cpp  CardAtlasData.h  IconAtlasData.cpp  IconAtlasData.h  ResourceIds.h  ResourceLoader.cpp  ResourceLoader.h  resources.rc
src/rules/: Card.cpp  Card.h  Deck.cpp  Deck.h  HandPattern.cpp  HandPattern.h  MoveValidator.cpp  MoveValidator.h  PaoDeKuaiRules.cpp  PaoDeKuaiRules.h  RuleSet.h  RuleText.cpp  RuleText.h  Scoring.cpp  Scoring.h
src/scenes/: GameScene.cpp  GameScene.h  HelpScene.cpp  HelpScene.h  LoadingScene.cpp  LoadingScene.h  SceneCommon.h  SettingsScene.cpp  SettingsScene.h  StartScene.cpp  StartScene.h  StatsScene.cpp  StatsScene.h
src/stats/: AppSettings.cpp  AppSettings.h  DailyStat.h  StatStore.cpp  StatStore.h
tests/ai_client_tests/: AiClientIntegrationTests.cpp  AiClientUnitTests.cpp
tests/rules_tests/: AiStrategyTests.cpp  DragSelectionTests.cpp  GameStateTests.cpp  RulesPatternTests.cpp  RulesTests.cpp  ScoringTests.cpp  StatsTests.cpp  TestHelpers.h  TestWeakAiStrategy.h
tests/scene_viewer/: SceneViewer.cpp
